@@ -1,0 +1,3 @@
+void blah(short *x) {
+    *x &= 7;
+}
